--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
 			<version>19.18.0.0</version>
 		</dependency>
 
+		<!-- MySQL -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.mybatis</groupId>
