--- a/pom.xml
+++ b/pom.xml
@@ -263,9 +263,12 @@
 			<version>2.9.8</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-		<!-- <dependency> 충돌남!! <groupId>com.google.code.gson</groupId> <artifactId>gson</artifactId> 
-			<version>2.8.5</version> </dependency> -->
-		<!-- Add MongoDB Lib -->
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
 
 		<!-- spring-core 5.3.8 추가하니 에러가 나지 않음 -->
 		<dependency>
@@ -301,6 +304,25 @@
 			<groupId>se.michaelthelin.spotify</groupId>
 			<artifactId>spotify-web-api-java</artifactId>
 			<version>8.3.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version> <!-- 최신 버전 확인 필요 -->
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
 		</dependency>
 
 		<dependency>
